// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <SearchScreen /> debe de mostrar noticia por id y el input con el valor del queryString 1`] = `
Array [
  <h1
    className="mt-5 mb-5"
  >
    Busqueda de noticias por ID 🔍
  </h1>,
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Buscar
        <hr />
        <form
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            className="form-control"
            name="searchText"
            onChange={[Function]}
            placeholder="Buscar noticias"
            type="number"
            value="11"
          />
          <button
            className="btn btn-outline-primary mt-3 moreInfoButton btn-lg"
            type="submit"
          >
            Buscar ...
          </button>
        </form>
      </h4>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Resultados
      </h4>
      <hr />
      <div
        className="alert alert-danger animate__animated animate__fadeIn"
      >
        No hay resultados 
        11
      </div>
    </div>
  </div>,
]
`;

exports[`Pruebas en el <SearchScreen /> se debe mostrar correctamente los valores por defecto 1`] = `
Array [
  <h1
    className="mt-5 mb-5"
  >
    Busqueda de noticias por ID 🔍
  </h1>,
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Buscar
        <hr />
        <form
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            className="form-control"
            name="searchText"
            onChange={[Function]}
            placeholder="Buscar noticias"
            type="number"
            value=""
          />
          <button
            className="btn btn-outline-primary mt-3 moreInfoButton btn-lg"
            type="submit"
          >
            Buscar ...
          </button>
        </form>
      </h4>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Resultados
      </h4>
      <hr />
      <div
        className="alert alert-info animate__animated animate__pulse"
      >
        Buscar noticias
      </div>
    </div>
  </div>,
]
`;
